--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@ version: '3.4'
 services:
   postgres_db:
     container_name: database_container
-    image: postgres:13
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    build: ./database
     ports:
       - "5432:5432"
     volumes:
@@ -13,7 +10,7 @@ services:
 
   restserver:
     container_name: rest_server_container  
-    build: .
+    build: ./webserver
     ports:
       - "5000:5000"
 
